--- a/standard-backend/.gitignore
+++ b/standard-backend/.gitignore
@@ -1,5 +1,5 @@
-.idea/
-.aws/
+.idea
+.aws
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
 ### Linux ###
